force-app/main/default/objects/et4ae5__IndividualEmailResult__c/et4ae5__IndividualEmailResult__c.object-meta.xml
<CustomObject>
    <label>Individual Email Result</label>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Email Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>