force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__NumberOfTotalClicks__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__NumberOfTotalClicks__c</fullName>
    <inlineHelpText>El número total de veces que este suscriptor hizo clic en los vínculos de este correo electrónico</inlineHelpText>
    <label>Number of Total Clicks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>