force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__SendDefinition__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__SendDefinition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>El identificador único del envío de correo electrónico. Es posible que se le solicite este número cuando llave al servicio de asistencia de Marketing Cloud si se presenta la necesidad.</inlineHelpText>
    <label>Send Definition</label>
    <referenceTo>et4ae5__SendDefinition__c</referenceTo>
    <relationshipLabel>Individual Email Results</relationshipLabel>
    <relationshipName>IndividualEmailResults</relationshipName>
    <type>Lookup</type>
</CustomField>