force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__SoftBounce__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__SoftBounce__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>El correo electrónico enviado se rechazó debido a una anomalía aparentemente temporal, por ejemplo, porque el buzón de entrada está lleno, después de que el sistema haya reintentado enviar el correo electrónico sin éxito cada 15 minutos durante 72 horas.</inlineHelpText>
    <label>Soft Bounce</label>
    <type>Checkbox</type>
</CustomField>