force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__Tracking_As_Of__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Tracking_As_Of__c</fullName>
    <defaultValue>now()</defaultValue>
    <inlineHelpText>La fecha y la hora de recepción de la última actualización de seguimiento por parte de Salesforce</inlineHelpText>
    <label>Tracking As Of</label>
    <type>DateTime</type>
</CustomField>