force-app/main/default/objects/et4ae5__IndividualEmailResult__c/fields/et4ae5__TriggeredSendDefinitionName__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__TriggeredSendDefinitionName__c</fullName>
    <formula>et4ae5__TriggeredSendDefinition__r.Name</formula>
    <inlineHelpText>Si este correo electrónico se generó automáticamente por un Envío desencadenado, el nombre del Envío desencadenado que generó el correo electrónico se mostrará aquí.</inlineHelpText>
    <label>Triggered Send Name</label>
    <type>Text</type>
</CustomField>